Archive2/3f/8772e1227ffb9e/output
main.cpp:22:9: error: class member cannot be redeclared
    int propose();
        ^
main.cpp:19:9: note: previous declaration is here
    int propose();
        ^
1 error generated.
